[package]
name = "m0usurouter"
version = "0.3.0"
edition = "2021"
description = "Message router for the m0usunet mesh network"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
rumqttc = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1"
ratatui = { version = "0.28", default-features = false, features = ["crossterm"] }
crossterm = "0.28"
ureq = "3"

[[bin]]
name = "m0usurouter"
path = "src/main.rs"

[[bin]]
name = "t320-client"
path = "src/t320.rs"

[profile.release]
opt-level = "s"
lto = true
strip = true
