[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "m0usunet"
version = "0.1.0"
description = "Unified messaging TUI"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.89,<1.0",  # pinned: chat highlights use private internals
    "pydantic>=2.0",
    "anthropic>=0.80",
]

[project.scripts]
M0usuNet = "m0usunet.cli:main"
