[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "m0usunet"
version = "0.3.0"
description = "Headless messaging daemon with mesh routing"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "paho-mqtt>=2.0",
    "cryptography>=42.0",
]

[project.scripts]
m0usunet = "m0usunet.cli:main"
